# sagemaker-hyperpod-recipes

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Config  README.md  brazil.ion  build.sh  main.py  pyproject.toml  requirements.txt  validations_wrapper.py
.clinerules/: agent.md
.github/: CODEOWNERS
.github/scripts/: check_eval_coverage.py  check_inference_coverage.py  check_pypi_deps.py  compare_launch_jsons.py  parse_validation_results.py  post_pr_comment.py  process_recipe_metadata.py  resolve_model_artifacts.py  tickety.py  trigger_lambda.py  validation_helpers.py
.github/workflows/: auto-configurator-trigger.yml  check-deps.yml  code-commit-runner-push.yml  eval-validation-workflow.yml  hp-recipes-validation-runner-smtj.yml  inference-validation-workflow.yml  js_release.yml  license-scan-runner-pull.yml  orchestrator_validation.yml  pr-auto-populate-commit-details.yml  pr-description-check.yml  pre-commit-check-runner.yml  pricing-benchmark-trigger.yml  publish-traffic-metrics.yml  recipe-change-processor.yml  recipe-version-check.yml  repo-monitoring-cron.yml  unit-test-runner-push.yml  unit-test-runner.yml
.kiro/hooks/: auto-generate-commit-pr-description.kiro.hook
auto_configurator/: README.md  __init__.py  main.py
auto_configurator/benchmarking/: auto_config_runner.py
auto_configurator/config_optimizer/: __init__.py  base_optimizer.py  llmft_optimizer.py  verl_optimizer.py
auto_configurator/evaluation/: __init__.py  base_evaluator.py  llmft_evaluator.py  verl_evaluator.py
auto_configurator/example/: auto_config.yaml
auto_configurator/utils/: __init__.py  cluster_config.py  util.py
docs/: HYPERPARAMETERS.md  RECIPES.md
hyperpod_recipes/: __init__.py  recipe.py
launcher/: __init__.py  efa.py
launcher/config_validator/: __init__.py  type_validator.py
launcher/evaluation/: __init__.py  constants.py  launchers.py  sm_jobs_launcher.py
launcher/mtrl/: launchers.py
launcher/nemo/: __init__.py  constants.py  launchers.py  recipe_stages.py  slurm_launcher.py  stages.py
launcher/nova/: __init__.py  launchers.py  utils.py
launcher/recipe_templatization/: base_recipe_template_processor.py  jumpstart_model-id_map.json  launch_json_validation.py  process_special_override_parameters.py  unsupported_recipes_list.json
launcher_scripts/custom_model/: run_falcon.sh
launcher_scripts/custom_script/: README.md  config_slurm.yaml
launcher_scripts/deepseek/: run_hf_deepseek_r1_671b_seq8k_gpu_lora.sh  run_llmft_deepseek_r1_distilled_llama_70b_seq4k_gpu_dpo.sh  run_llmft_deepseek_r1_distilled_llama_70b_seq4k_gpu_sft_fft.sh  run_llmft_deepseek_r1_distilled_llama_70b_seq4k_gpu_sft_lora.sh  run_llmft_deepseek_r1_distilled_llama_8b_seq4k_gpu_dpo.sh  run_llmft_deepseek_r1_distilled_llama_8b_seq4k_gpu_dpo_fft.sh  run_llmft_deepseek_r1_distilled_llama_8b_seq4k_gpu_sft_fft.sh  run_llmft_deepseek_r1_distilled_llama_8b_seq4k_gpu_sft_lora.sh  run_llmft_deepseek_r1_distilled_qwen_14b_seq4k_gpu_dpo.sh  run_llmft_deepseek_r1_distilled_qwen_14b_seq4k_gpu_dpo_fft.sh  run_llmft_deepseek_r1_distilled_qwen_14b_seq4k_gpu_sft_fft.sh  run_llmft_deepseek_r1_distilled_qwen_14b_seq4k_gpu_sft_lora.sh  run_llmft_deepseek_r1_distilled_qwen_1_dot_5b_seq4k_dpo_fft.sh  run_llmft_deepseek_r1_distilled_qwen_1_dot_5b_seq4k_gpu_dpo.sh  run_llmft_deepseek_r1_distilled_qwen_1_dot_5b_seq4k_gpu_sft_fft.sh  run_llmft_deepseek_r1_distilled_qwen_1_dot_5b_seq4k_gpu_sft_lora.sh  run_llmft_deepseek_r1_distilled_qwen_32b_seq4k_gpu_dpo.sh  run_llmft_deepseek_r1_distilled_qwen_32b_seq4k_gpu_dpo_fft.sh  run_llmft_deepseek_r1_distilled_qwen_32b_seq4k_gpu_sft_fft.sh  run_llmft_deepseek_r1_distilled_qwen_32b_seq4k_gpu_sft_lora.sh  run_llmft_deepseek_r1_distilled_qwen_7b_seq4k_gpu_dpo.sh  run_llmft_deepseek_r1_distilled_qwen_7b_seq4k_gpu_dpo_fft.sh  run_llmft_deepseek_r1_distilled_qwen_7b_seq4k_gpu_sft_fft.sh  (+37 more)
recipes_collection/: config.yaml  jumpstart_exclusions.yaml
requirements/: requirements-default.txt  requirements-hatch-build.txt
scripts/: __init__.py  check_jumpstart_recipes.py  detect_recipes.py  generate_hyperparameters_doc.py  generate_launch_jsons.py  generate_recipes_doc.py  generate_resolved_recipes.py  hydra_resolver.py  licenseChecker.sh  record_metrics.py
template/: sm_jobs.py  sm_jobs_estimator.py
tests/: test_check_eval_coverage.py  test_check_inference_coverage.py  test_config_files.py  test_elastic_main.py  test_hpcli_launcher.py  test_hub_override_utils.py  test_hyperparameters_doc_generator.py  test_launch_json_schema.py  test_launcher_script_generator.py  test_main_mtrl_eval_routing.py  test_nova_metadata.py  test_post_pr_comment.py  test_pysdk_serverless.py  test_readme.py  test_recipe_links.py  test_recipes.py  test_recipes_doc_generator.py  test_resolve_model_artifacts.py  test_resolved_recipes.py  test_serverless_launcher.py  test_template_quote_removal.py  test_tickety.py  test_utils.py  test_verl_recipe_model_path.py  test_verl_recipes_constraints.py
utils/: k8s_download_model.py  model_utils.py  recipe_diff.py  recipe_naming_util.py  recipe_utils.py  template_utils.py
(+1601 files in other folders)
